# podman-py

./: .cirrus.yml  .cursorignore  .gitignore  .packit.sh  .packit.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AGENTS.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  OWNERS  README.md  SECURITY.md  bors.toml  connection.py  gating.yml  pyproject.toml  python-podman.spec.rpkg  requirements.txt  ruff.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: renovate.json5
.github/actions/build-python-package/: action.yml
.github/scripts/: update-version.sh
.github/workflows/: build.yml  create-github-release.yml  create-release-pr.yml  pr.yml  pre-commit.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
contrib/cirrus/: build_podman.sh  enable_podman.sh  enable_ssh.sh  latest_podman.sh  test.sh
contrib/cirrus/gating/: Dockerfile
contrib/examples/: demo.py
docs/: index.md
docs/source/: conf.py  index.rst
docs/source/_static/: about.html
docs/source/_templates/apidoc/: module.rst_t
hack/: get_ci_vm.sh
images/: images.py
libpod_errors/: __init__.py  errors.py  utils.py
plans/: main.fmf
podman/: __init__.py  api_connection.py  auth.py  client.py  config.py  constants.py  errors.py  http.py  logger.py  proxy.py  tls.py  tlsconfig.py  version.py
podman/api/: __init__.py  adapter_utils.py  api_versions.py  base.py  cached_property.py  client.py  http_utils.py  output_utils.py  parse_utils.py  path_utils.py  ssh.py  tar_utils.py  typing_extensions.py  uds.py  url_utils.py  version.py
podman/clients/: __init__.py  default.py  lib.py
podman/command/: command.py
podman/containers/: __init__.py
podman/credentials/: store.py
podman/domain/: config.py  containers.py  containers_create.py  containers_manager.py  containers_run.py  events.py  image_build.py  images.py  images_build.py  images_manager.py  ipam.py  json_stream.py  manager.py  manifests.py  networks.py  networks_manager.py  pods.py  pods_manager.py  quadlets.py  registry_data.py  secrets.py  system.py  volumes.py
podman/endpoints/: __init__.py  image.py  lib.py  system.py
podman/errors/: __init__.py  exceptions.py
podman/exceptions/: __init__.py  http.py  services.py
podman/images/: __init__.py  api.py  collection.py  model.py  registry_data.py
podman/manifests/: __init__.py
podman/networks/: __init__.py
podman/resources/: __init__.py  collection.py  model.py
podman/resources/container/: api.py  collection.py  container.py  utils.py
podman/resources/images/: __init__.py  api.py  collection.py  image.py  registry_data.py  utils.py
podman/services/: __init__.py  images.py  lib.py  system.py
podman/system/: __init__.py
podman/tests/: README.md  __init__.py  conftest.py  errors.py  utils.py
podman/tests/integration/: base.py  test_adapters.py  test_container_create.py  test_container_exec.py  test_containers.py  test_images.py  test_manifests.py  test_networks.py  test_pods.py  test_secrets.py  test_system.py  test_volumes.py  utils.py
podman/tests/unit/: test_000_connection.py  test_010_version.py  test_api_connection.py  test_api_utils.py  test_build.py  test_config.py  test_container.py  test_containers.py  test_containersmanager.py  test_domainmanager.py  test_events.py  test_image.py  test_imagesmanager.py  test_manager.py  test_manifests.py  test_network.py  test_networksmanager.py  test_parse_utils.py  test_path_utils.py  test_pod.py  test_podmanclient.py  test_podsmanager.py  test_quadlet.py  test_quadletsmanager.py  test_registrydata.py  test_secrets.py  test_system.py  test_utils.py  test_volume.py  test_volumesmanager.py
podman/tests/unit/containers/: test_containers.py
podman/tests/unit/images/: test_images.py
podman/tests/unit/manifests/: test_manifests.py
podman/tests/unit/networks/: test_networks.py
podman/tests/unit/system/: test_system.py
podman/transport/: __init__.py  npipeconn.py  npipesocket.py  sshconn.py  ssladapter.py  unixconn.py
podman/types/: base.py  containers.py  healthcheck.py  services.py
podman/utils/: __init__.py  build.py  config.py  json_stream.py  socket.py  utils.py
rpm/: python-podman.spec  update-spec-version.sh
test/unit/: test_000_connection.py  test_010_version.py  test_020_system.py
tests/: README.md  __init__.py  main.fmf
tests/unit/: __init__.py  test_clients.py  test_endpoints.py  test_http.py
vagrant/: Vagrantfile  bootstrap.sh  podman.service
