[metadata]
name = podman
version = attr: podman.__version__
author = Brent Baude, Jhon Honce
author_email = jhonce@redhat.com
description = Bindings for Podman RESTful API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/containers/podman-py
license =  Apache-2.0
license_file =  LICENSE
platforms = any
project_urls =
    Bug Tracker = https://github.com/containers/podman-py/issues
    Libpod API = https://docs.podman.io/en/latest/_static/api.html
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
keywords = podman, libpod

[options]
include_package_data = True
python_requires = >=3.6
test_suite =
# Any changes should be copied into pyproject.toml
install_requires =
    pyxdg>=0.26
    requests>=2.24
    toml>=0.10.2
    urllib3>=1.24.2

# typing_extensions are included for RHEL 8.5
# typing_extensions;python_version<'3.8'

[bdist_wheel]
# python < 3.6 not supported
universal = false

[sdist]
formats = gztar
