[metadata]
name = podman
version = 5.1.0
author = Brent Baude, Jhon Honce, Urvashi Mohnani
author_email = jhonce@redhat.com
description = Bindings for Podman RESTful API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/containers/podman-py
license =  Apache-2.0
license_files =  LICENSE
platforms = any
project_urls =
    Bug Tracker = https://github.com/containers/podman-py/issues
    Libpod API = https://docs.podman.io/en/latest/_static/api.html
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
keywords = podman, libpod

[options]
include_package_data = True
python_requires = >=3.6
test_suite =
# Any changes should be copied into pyproject.toml
install_requires =
    requests >=2.24
    tomli>=1.2.3; python_version<'3.11'
    urllib3

[options.extras_require]
progress_bar =
    rich >= 12.5.1

# typing_extensions are included for RHEL 8.5
# typing_extensions;python_version<'3.8'

[bdist_wheel]
# python < 3.6 not supported
universal = false

[sdist]
formats = gztar
